feat: add assets fonts in yaml

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Flutter: Attach to Device",
-            "type": "dart",
-            "request": "attach"
-        },
-        {
             "name": "santo_rosario",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "deviceId": "chrome"
         },
         {
             "name": "santo_rosario (profile mode)",
