--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ flutter:
      - assets\images\luminosos.png
      - assets\images\dolorosos.png
      - assets\images\gloriosos.png
+     - assets\images\VirgenLourdes.png
+     - assets\images\Rosario.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
