--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
      - assets\images\perla.png
      - assets\images\rosa.png
      - assets\images\medalla.png
+     - assets\images\cruz.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
