--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets\images\gozosos.png
-     - assets\images\luminosos.png
+     - assets\images\luminosos.jpg
      - assets\images\dolorosos.png
      - assets\images\gloriosos.png
      - assets\images\VirgenLourdes.png
