pantallas responsives y data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
      - assets\images\rosa.png
      - assets\images\medalla.png
      - assets\images\cruz.png
+     - assets\images\brillo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
