--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  just_audio: ^0.10.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,33 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets\images\VirgenLourdes.jpg
-     - assets\images\Rosario.png
-     - assets\images\perla.png
-     - assets\images\rosa.png
-     - assets\images\medalla.png
-     - assets\images\cruz.png
-     - assets\images\brillo.png
-     - assets\images\gozosos1.png
-     - assets\images\gozosos2.png
-     - assets\images\gozosos3.png
-     - assets\images\gozosos4.png
-     - assets\images\gozosos5.png
-     - assets\images\luminosos1.png
-     - assets\images\luminosos2.png
-     - assets\images\luminosos3.png
-     - assets\images\luminosos4.png
-     - assets\images\luminosos5.png
-     - assets\images\dolorosos1.png
-     - assets\images\dolorosos2.png
-     - assets\images\dolorosos3.png
-     - assets\images\dolorosos4.png
-     - assets\images\dolorosos5.png
-     - assets\images\gloriosos1.png
-     - assets\images\gloriosos2.png
-     - assets\images\gloriosos3.png
-     - assets\images\gloriosos4.png
-     - assets\images\gloriosos5.png
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
