--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   just_audio: ^0.10.4
   wakelock_plus: ^1.3.2
   shared_preferences: ^2.5.3
+  table_calendar: ^3.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
